--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Malla Curricular - Enfermería UDLA</h1>
-  <div id="malla" class="malla-grid"></div>
+  <div id="malla" class="grid-container"></div>
 
   <script src="script.js"></script>
 </body>
